--- a/index.html
+++ b/index.html
@@ -5,151 +5,145 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Responsive Personal Portfolio Website Design | Codehal</title>
+  <link rel="shortcut icon" href="images/G.ico" type="image/x-icon">
+  <title>Gunasekharan | Portfolio</title>
 
-  <!-- box icons -->
+  <!-- Box icons -->
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
-  <!-- custom css -->
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-  <!-- header design -->
+  <!-- Header / Navbar -->
   <header class="header">
-    <a href="#" class="logo">Guna</a>
+    <a href="#home" class="logo">Gunasekharan</a>
     <i class="bx bx-menu" id="menu-icon"></i>
     <nav class="navbar">
       <a href="#home" class="active">Home</a>
-      <a href="#about">About</a>
+      <a href="#about">About Me</a>
       <a href="#services">Services</a>
-      <a href="#portfolio">Guna</a>
+      <a href="#portfolio">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
-  <!-- home section design -->
+
+  <!-- Home / Hero Section -->
   <section class="home" id="home">
     <div class="home-content">
-      <h3>Hello, It's Me</h3>
+      <h3>Hello, I’m</h3>
       <h1>Gunasekharan</h1>
-      <h3>And I'm a <span class="multiple-text"></span></h3>
-      <p>I specialize in developing highly responsive, intuitive websites and applications. With a solid expertise in
-        both front-end and back-end technologies, I design and implement seamless, user-centric experiences that deliver
-        value and functionality across all devices.
+      <h3>I'm a <span class="multiple-text"></span></h3>
+      <p>
+        I design and develop modern, responsive websites, applications, and games.
+        Passionate about clean UI, smooth UX, and high-performance code.
       </p>
       <div class="social-media">
-        <a href="#"><i class='bx bxl-facebook'></i></a>
-        <a href="#"><i class='bx bxl-twitter'></i></a>
+        <a href="https://www.linkedin.com/in/gunasekharan007/"><i class='bx bxl-linkedin'></i></a>
+        <a href="https://github.com/Git2Guna"><i class='bx bxl-github'></i></a>
         <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-        <a href="#"><i class='bx bxl-linkedin'></i></a>
       </div>
-      <a href="#" class="btn">Download CV</a>
+      <a href="images/Gunasekharan - Resume.pdf" class="btn">Download CV</a>
     </div>
     <div class="home-img">
-      <img src="images/G.png" alt="" height="600" width="731">
+      <img src="images/G.png" alt="Gunasekharan Portfolio Image">
     </div>
   </section>
-  <!-- about section design -->
+
+  <!-- About Section -->
   <section class="about" id="about">
     <div class="about-img">
-      <img src="images/U.png" alt="" height="600" width="731">
+      <img src="images/U.png" alt="About Me Image">
     </div>
     <div class="about-content">
-      <h2 class="heading">About<span>Me</span></h2>
-      <h3>Frontend Developer!</h3>
-      <p>I am a software developer specializing in web development, with a focus on creating clean, responsive, and
-        user-friendly applications. Proficient in HTML, CSS, JavaScript, React, and Node.js, I build scalable solutions
-        that deliver seamless experiences. I am committed to writing efficient, maintainable code and continuously
-        expanding my knowledge of new tools, frameworks, and technologies to stay up to date with industry trends.
+      <h2 class="heading">About <span>Me</span></h2>
+      <h3>Frontend & Software Developer</h3>
+      <p>
+        I am a software developer specializing in web and game development. I create responsive, user-friendly, and high-performance
+        applications. Proficient in HTML, CSS, JavaScript, React, Node.js, and Python, I focus on clean, maintainable code and continuous learning.
       </p>
       <a href="#" class="btn">Read More</a>
     </div>
   </section>
-  <!-- services section design -->
+
+  <!-- Services Section -->
   <section class="services" id="services">
-    <h2 class="heading">Our<span>Services</span></h2>
+    <h2 class="heading">My <span>Services</span></h2>
     <div class="services-container">
       <div class="services-box">
         <i class='bx bx-code-alt'></i>
         <h3>Web Development</h3>
-        <p>I highlight web development projects that showcase my ability to create simple, functional, and responsive websites. Using tools like HTML, CSS, JavaScript, and Node.js, I build user-friendly websites that work well on any device. My focus is on clean design, smooth functionality, and meeting the needs of both users and clients.
+        <p>
+          I build responsive, clean, and functional websites using HTML, CSS, JavaScript, and Node.js, focusing on
+          smooth UX and modern design.
         </p>
         <a href="#" class="btn">Read More</a>
       </div>
       <div class="services-box">
         <i class='bx bx-joystick'></i>
         <h3>Game Development</h3>
-        <p> I display game development projects using JavaScript and Python. I create interactive games with smooth gameplay and easy controls. My work focuses on providing fun and engaging experiences for players, showcasing my skills in coding and game development.
+        <p>
+          I create interactive and engaging games using JavaScript and Python. Focused on smooth gameplay, simple controls,
+          and fun user experiences.
         </p>
         <a href="#" class="btn">Read More</a>
       </div>
       <div class="services-box">
         <i class='bx bxl-android'></i>
         <h3>App Development</h3>
-        <p>I feature app development projects using React Native. I build smooth, responsive mobile apps for both iOS and Android, focusing on user-friendly interfaces and seamless performance. My work highlights my skills in React Native, allowing me to create high-quality apps that deliver great user experiences.
+        <p>
+          I build mobile applications using React Native for both iOS and Android, creating user-friendly interfaces and
+          smooth performance.
         </p>
         <a href="#" class="btn">Read More</a>
       </div>
     </div>
   </section>
-  <!-- portfolio section design -->
+
+  <!-- Portfolio Section -->
   <section class="portfolio" id="portfolio">
-    <h2 class="heading">Latest<span>Project</span></h2>
+    <h2 class="heading">My <span>Projects</span></h2>
     <div class="portfolio-container">
       <div class="portfolio-box">
-        <img src="images/shop.jpg" alt="">
+        <img src="images/shop.jpg" alt="Web Project">
         <div class="portfolio-layer">
-          <h4>Web Developed</h4>
-          <p>This eCommerce project is built with HTML, CSS, and JavaScript, allowing users to browse products and make purchases. It features a responsive design and an interactive shopping experience.</p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
+          <h4>Web Development</h4>
+          <p>
+            Responsive eCommerce project built with HTML, CSS, and JavaScript.
+          </p>
+          <a href="https://github.com/Git2Guna?tab=repositories"><i class='bx bx-link-external'></i></a>
         </div>
       </div>
       <div class="portfolio-box">
-        <img src="images/play.jpg" alt="">
+        <img src="images/play.jpg" alt="Game Project">
         <div class="portfolio-layer">
-          <h4>Game Developed</h4>
-          <p>This game development project is built using JavaScript, focusing on creating an interactive and engaging experience. It includes smooth gameplay, simple controls, and a responsive design for a fun user experience.</p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
+          <h4>Game Development</h4>
+          <p>
+            Interactive game built with JavaScript, featuring smooth gameplay and engaging UX.
+          </p>
+          <a href="https://github.com/Git2Guna?tab=repositories"><i class='bx bx-link-external'></i></a>
         </div>
       </div>
       <div class="portfolio-box">
-        <img src="images/app.jpg" alt="">
+        <img src="images/app.jpg" alt="App Project">
         <div class="portfolio-layer">
-          <h4>App Developed</h4>
-          <p>This app development project is built using React Native, allowing for smooth and responsive mobile applications on both iOS and Android. It features a user-friendly interface and seamless performance across devices.</p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
-        </div>
-      </div>
-      <div class="portfolio-box">
-        <img src="images/portfolio4.jpg" alt="">
-        <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>Loreum ispum dolor sit amet consectetur adipisicing elit.maiores,ratione</p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
-        </div>
-      </div>
-      <div class="portfolio-box">
-        <img src="images/portfolio5.jpg" alt="">
-        <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>Loreum ispum dolor sit amet consectetur adipisicing elit.maiores,ratione</p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
-        </div>
-      </div>
-      <div class="portfolio-box">
-        <img src="images/portfolio6.jpg" alt="">
-        <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>Loreum ispum dolor sit amet consectetur adipisicing elit.maiores,ratione</p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
+          <h4>App Development</h4>
+          <p>
+            Mobile application built with React Native for smooth, cross-platform performance.
+          </p>
+          <a href="https://github.com/Git2Guna?tab=repositories"><i class='bx bx-link-external'></i></a>
         </div>
       </div>
     </div>
   </section>
-  <!-- contact section design -->
-  <section class="contact" id="contact">
-    <h2 class="heading">Contact<span>Me!</span></h2>
 
+  <!-- Contact Section -->
+  <section class="contact" id="contact">
+    <h2 class="heading">Get In <span>Touch</span></h2>
     <form action="#">
       <div class="input-box">
         <input type="text" placeholder="Full Name">
@@ -157,30 +151,30 @@
       </div>
       <div class="input-box">
         <input type="number" placeholder="Mobile Number">
-        <input type="text" placeholder="Email Subject">
+        <input type="text" placeholder="Subject">
       </div>
-      <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+      <textarea cols="30" rows="10" placeholder="Your Message"></textarea>
       <input type="submit" value="Send Message" class="btn">
     </form>
   </section>
-  <!-- footer design -->
+
+  <!-- Footer -->
   <footer class="footer">
     <div class="footer-text">
-      <p>Copyright &copy; 2023 by Developer Guna | All rights Reserved.</p>
+      <p>© 2022 Gunasekharan | Frontend Developer. Designed & Built by Me.</p>
     </div>
     <div class="footer-iconTop">
       <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
     </div>
   </footer>
 
-  <!-- scroll reveal -->
+  <!-- ScrollReveal JS -->
   <script src="https://unpkg.com/scrollreveal"></script>
 
-  <!-- typed js -->
+  <!-- Typed.js -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
-  <!-- custom js -->
+  <!-- Custom JS -->
   <script src="js/script.js"></script>
 </body>
-
 </html>
